@@ -1,3 +1,12 @@
+2007-06-10  Benno Schulenberg  <bensberg-at-justemail-dot-net>
+ 
+        * unichrome/via.man:
+        * unichrome/via_driver.c: (VIAPreInit):
+  
+        Move reading of the VideoRAM option to after X has parsed the
+        config file.  Also put the chipset and revision print statements
+        together and at the beginning.  Plus several small layout tweaks.
+
 2007-05-18 Xavier Bachelot <xavier-at-bachelot-dot-org> 
 
 	* libxvmc/Makefile.am:
@@ -24,9 +33,9 @@
 	* unichrome/via_driver.h:
 	* unichrome/via.man:
 
-	Added per chipset option defaults.  This should allow the
-	driver to install and work out of the box with almost all
-	hardware and xorg.conf configurations.
+	Added per-chipset option defaults.  This should allow the
+	driver to work out of the box with almost all hardware and
+	xorg.conf configurations.
 
 2007-05-07  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
 
